fixed 100% size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 #root {
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
